# agent-terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md  agent-terminal-skill-plan.md  install-skill.sh  package.json  references  templates
.claude/: check-warnings.sh
.github/workflows/: ci.yml  release.yml
references/: commands.md  matrix-testing.md  patterns.md  performance.md  recording.md  session-management.md  snapshot-format.md
scripts/: postinstall.js
skills/agent-terminal/: SKILL.md
skills/agent-terminal/evals/: evals.json
skills/agent-terminal/references/: commands.md  patterns.md  snapshot-format.md
skills/agent-terminal/templates/: basic-test.sh  (+2 more)
src/: annotate.rs  ansi.rs  interact.rs  main.rs  perf.rs  record.rs  session.rs  snapshot.rs  wait.rs  watch.rs  web.rs
src/fonts/: LICENSE
src/web/: index.html  player.html  player.js  style.css
templates/: basic-test.sh  curses-app.sh  repl-test.sh
tests/: a11y_test.rs  assert_test.rs  clipboard_test.rs  doctor_test.rs  env_test.rs  find_test.rs  init_test.rs  interaction_test.rs  lifecycle_test.rs  matrix_test.rs  mouse_test.rs  multi_pane_test.rs  new_flags_test.rs  perf_test.rs  process_health_test.rs  realworld_altscreen_test.rs  realworld_edge_test.rs  realworld_lifecycle_test.rs  realworld_nvim_test.rs  realworld_pager_test.rs  realworld_repl_test.rs  realworld_system_test.rs  record_test.rs  resize_test.rs  screenshot_test.rs  scrollback_test.rs  signal_test.rs  snapshot_test.rs  wait_test.rs
tests/common/: mod.rs
tests/fixtures/: Cargo.toml
