[workspace]
members = [".", "tests/fixtures"]

[package]
name = "agent-terminal"
version = "0.1.0"
edition = "2021"
description = "TUI testing tool for autonomous agent-driven terminal application testing"
license = "MIT"
repository = "https://github.com/anthropics/agent-terminal"

[[bin]]
name = "agent-terminal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
vte = "0.15"
image = "0.25"
ab_glyph = "0.2"
regex = "1"
nix = { version = "0.29", features = ["signal", "process"] }
tempfile = "3"
which = "7"
ratatui = "0.29"
crossterm = "0.28"
tiny_http = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
